--- a/login.html
+++ b/login.html
@@ -3,44 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrar - Vital Recife Suplementos</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Login - Vital Recife Suplementos</title>
+    <link rel="stylesheet" href="css1/base.css">
+    <link rel="stylesheet" href="css1/auth.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
 </head>
 <body>
-    <div class="auth-container">
-        <div class="card auth-card">
-            <div class="card-content">
-                <div class="auth-header">
-                    <h1 class="auth-title">Entrar</h1>
-                    <p class="auth-description">Entre com sua conta para acessar a plataforma</p>
-                </div>
 
-                <form action="user-area.html" method="get">
-                    <div class="form-group">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" name="email" class="form-input" placeholder="seu@email.com" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password" class="form-label">Senha</label>
-                        <input type="password" id="password" name="password" class="form-input" placeholder="••••••••" required>
-                    </div>
-
-                    <div style="text-align: right; margin-bottom: 1rem;">
-                        <a href="reset-password.html" class="auth-link" style="font-size: 0.875rem;">Esqueceu a senha?</a>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary btn-full">Entrar</button>
-                </form>
-
-                <div class="auth-footer">
-                    <p style="color: var(--muted-foreground); font-size: 0.875rem;">
-                        Não tem uma conta? 
-                        <a href="register.html" class="auth-link">Cadastre-se</a>
-                    </p>
-                </div>
+    <header class="navbar">
+        <div class="container">
+            <img src="logo.jpeg" alt="Logo Vital Recife" class="logo">
+            <nav>
+                <a href="ecommerce.html">Catálogo</a>
+                <a href="login.html" class="active">Login</a>
+                <a href="register.html">Cadastro</a>
+            </nav>
+            <div class="mobile-menu-icon">
+                <span class="material-symbols-outlined">menu</span>
             </div>
         </div>
-    </div>
+    </header>
+
+    <main class="container main-content auth-container">
+        <div class="auth-card">
+            <h2>Bem-vindo de volta!</h2>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="seu@email.com" >
+                </div>
+                <div class="form-group">
+                    <label for="password">Senha</label>
+                    <input type="password" id="password" placeholder="Digite sua Senha">
+                </div>
+                <a href="dashboard.html"><button class="cta-button">Entrar</button></a>
+            </form>
+            <p>Não tem uma conta? <a href="register.html">Cadastre-se</a></p>
+            <p><a href="reset-password.html">Esqueceu sua senha?</a></p>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <img src="logo.jpeg" alt="Logo Rodapé" class="logo-footer">
+            <p>&copy; 2025 Vital Recife Suplementos. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script>
+        document.querySelector(".mobile-menu-icon").addEventListener("click", function() {
+            const nav = document.querySelector(".navbar nav");
+            if (nav) {
+                nav.classList.toggle("active");
+            }
+        });
+    </script>
+
 </body>
 </html>
+
