--- a/profile.html
+++ b/profile.html
@@ -4,113 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil - Vital Recife Suplementos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="dashboard_layout.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="navbar-container">
-            <a href="index.html" class="navbar-logo">
-                <span class="navbar-logo-icon">VRS</span>
-                <span class="navbar-logo-text">Vital Recife Suplementos</span>
-            </a>
-            <div class="navbar-menu">
-                <div class="dropdown">
-                    <button class="btn btn-ghost dropdown-toggle">👤 João Silva</button>
-                    <div class="dropdown-menu">
-                        <a href="user-area.html" class="dropdown-item">📊 Área do Usuário</a>
-                        <a href="gamification.html" class="dropdown-item">🏆 Gamificação</a>
-                        <a href="referral.html" class="dropdown-item">🎁 Indicações</a>
-                        <a href="profile.html" class="dropdown-item">👤 Perfil</a>
-                        <hr style="margin: 0.5rem 0; border: none; border-top: 1px solid var(--border);">
-                        <a href="index.html" class="dropdown-item">🚪 Sair</a>
-                    </div>
-                </div>
+
+    <header class="navbar">
+        <div class="container">
+            <img src="logo.jpeg" alt="Logo Vital Recife" class="logo">
+            <nav>
+                <a href="ecommerce.html">Catálogo</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="gamification.html">Gamificação</a>
+                <a href="referral.html">Indicação</a>
+                <a href="profile.html" class="active">Perfil</a>
+            </nav>
+            <div class="user-menu">
+                <span>Olá, Usuário!</span>
+                <img src="https://i.pravatar.cc/40" alt="Avatar do Usuário" class="avatar">
+            </div>
+            <div class="mobile-menu-icon">
+                <span class="material-symbols-outlined">menu</span>
             </div>
         </div>
-    </nav>
+    </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-container">
-            <h1>Meu Perfil</h1>
-            <p>Gerencie suas informações pessoais</p>
-        </div>
-    </section>
+    <main class="container main-content">
+        <div class="dashboard-layout">
+            <aside class="sidebar">
+                <h3>Minha Conta</h3>
+                <nav>
+                    <a href="dashboard.html"><span class="material-symbols-outlined">dashboard</span> Dashboard</a>
+                    <a href="gamification.html"><span class="material-symbols-outlined">sports_esports</span> Gamificação</a>
+                    <a href="referral.html"><span class="material-symbols-outlined">share</span> Indicação VIP</a>
+                    <a href="profile.html" class="active"><span class="material-symbols-outlined">person</span> Meu Perfil</a>
+                    <a href="#"><span class="material-symbols-outlined">logout</span> Sair</a>
+                </nav>
+            </aside>
+            <section class="dashboard-content">
+                <h1>Meu Perfil</h1>
+                <p class="text-muted">Gerencie suas informações pessoais e configurações da conta.</p>
 
-    <!-- Main Content -->
-    <main class="container">
-        <div style="max-width: 48rem; margin: 0 auto;">
-            <!-- Personal Information -->
-            <div class="card" style="margin-bottom: 1.5rem;">
-                <div class="card-header">
-                    <h2 class="card-title" style="display: flex; align-items: center; gap: 0.5rem;">
-                        👤 Informações Pessoais
-                    </h2>
-                </div>
-                <div class="card-content">
-                    <form>
-                        <div class="form-group">
-                            <label for="name" class="form-label">Nome Completo</label>
-                            <div style="position: relative;">
-                                <span style="position: absolute; left: 0.75rem; top: 50%; transform: translateY(-50%); color: var(--muted-foreground);">👤</span>
-                                <input type="text" id="name" class="form-input" value="João Silva" style="padding-left: 2.5rem;">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="email" class="form-label">Email</label>
-                            <div style="position: relative;">
-                                <span style="position: absolute; left: 0.75rem; top: 50%; transform: translateY(-50%); color: var(--muted-foreground);">✉️</span>
-                                <input type="email" id="email" class="form-input" value="joao.silva@email.com" style="padding-left: 2.5rem;">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="phone" class="form-label">Telefone</label>
-                            <div style="position: relative;">
-                                <span style="position: absolute; left: 0.75rem; top: 50%; transform: translateY(-50%); color: var(--muted-foreground);">📱</span>
-                                <input type="tel" id="phone" class="form-input" value="(81) 99999-9999" style="padding-left: 2.5rem;">
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary btn-full">
-                            💾 Salvar Alterações
-                        </button>
-                    </form>
-                </div>
-            </div>
-
-            <!-- Account Information -->
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">Informações da Conta</h2>
-                </div>
-                <div class="card-content">
-                    <div style="display: flex; flex-direction: column; gap: 1rem;">
-                        <div style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 0.75rem; border-bottom: 1px solid var(--border);">
-                            <span style="color: var(--muted-foreground);">Código de Indicação</span>
-                            <span style="font-weight: bold;">VRS123ABC</span>
-                        </div>
-                        <div style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 0.75rem; border-bottom: 1px solid var(--border);">
-                            <span style="color: var(--muted-foreground);">Status</span>
-                            <span style="font-weight: bold;">Silver</span>
-                        </div>
-                        <div style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 0.75rem; border-bottom: 1px solid var(--border);">
-                            <span style="color: var(--muted-foreground);">Nível</span>
-                            <span style="font-weight: bold;">Nível 2</span>
-                        </div>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="color: var(--muted-foreground);">Pontos Totais</span>
-                            <span style="font-weight: bold;">1250</span>
-                        </div>
+                <form class="profile-form">
+                    <div class="form-group">
+                        <label for="profile-name">Nome Completo</label>
+                        <input type="text" id="profile-name" value="Usuário Teste" required>
                     </div>
-                </div>
-            </div>
+                    <div class="form-group">
+                        <label for="profile-email">Email</label>
+                        <input type="email" id="profile-email" value="usuario@email.com" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="profile-phone">Telefone</label>
+                        <input type="text" id="profile-phone" value="(81) 99999-9999">
+                    </div>
+                    <div class="form-group">
+                        <label for="profile-password">Nova Senha</label>
+                        <input type="password" id="profile-password" placeholder="Deixe em branco para não alterar">
+                    </div>
+                    <button type="submit" class="cta-button">Salvar Alterações</button>
+                </form>
+            </section>
         </div>
     </main>
 
-    <script src="js/main.js"></script>
+    <footer class="footer">
+        <div class="container">
+            <img src="logo.jpeg" alt="Logo Rodapé" class="logo-footer">
+            <p>&copy; 2025 Vital Recife Suplementos. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script>
+        document.querySelector(".mobile-menu-icon").addEventListener("click", function() {
+            const nav = document.querySelector(".navbar nav");
+            if (nav) {
+                nav.classList.toggle("active");
+            }
+        });
+    </script>
+
 </body>
 </html>
+
